@@ -151,6 +151,7 @@ Other changes:
   -a destDir attribute with the appropriate dependency logic, which
    can be used with the jar attribute or nested filesets
   -a mapper to permit filename remapping on signing
+  -tsaurl and tsacert attributes for timestamped JAR signing
 
 Changes from Ant 1.6.2 to current Ant 1.6 CVS version
 =====================================================
